<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.FriendsActivity">

    <Button
            android:id="@+id/btn_open_photos"
            android:text="@string/open_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btn_exit"
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/count_friends"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_only_observed_friends"
                android:layout_margin="8dp"
        />
        <Switch
                android:id="@+id/switch_show_added_friends"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"/>
    </LinearLayout>

    <EditText
            android:id="@+id/txt_friends_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/friends_search_hint"
            android:lines="1"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <TextView
            android:id="@+id/txt_friends_no_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/cpv_friends"
            android:layout_width="@dimen/loader_size"
            android:layout_height="@dimen/loader_size"
            android:layout_gravity="center"
            android:visibility="gone"
            app:cpv_indeterminate="true"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/colorPrimary"/>
    </FrameLayout>
</LinearLayout>