<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo_civ_avatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_margin="16dp"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/photo_txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/photo_txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_txt_published"
                    android:textSize="14dp"/>
        </LinearLayout>
        <View
                android:id="@+id/photo_img_online"
                android:layout_width="@dimen/online_size"
                android:layout_height="@dimen/online_size"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"/>
    </LinearLayout>
    </LinearLayout>
        <ImageView
                android:id="@+id/photo_img_source_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/photo_txt_likes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_txt_likes"/>
        <TextView
                android:id="@+id/photo_txt_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_txt_comments"/>
    </LinearLayout>
</FrameLayout>